@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -52,9 +51,9 @@ public class StreamPractice {
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
         return peopleList.stream()
-                .filter(person -> person.getSex() == model.Person.Sex.MAN)
-                .filter(person -> person.getAge() >= fromAge && person.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .filter(person -> person.getSex() == model.Person.Sex.MAN
+                    && person.getAge() >= fromAge && person.getAge() <= toAge)
+                .toList();
     }
 
     /**
@@ -70,12 +69,13 @@ public class StreamPractice {
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
         return peopleList.stream()
-                .filter(person -> person.getAge() >= fromAge)
                 .filter(person -> (person.getSex() == Person.Sex.MAN
+                        && person.getAge() >= fromAge
                         && person.getAge() <= maleToAge)
                         || (person.getSex() == Person.Sex.WOMAN
+                        && person.getAge() >= fromAge
                         && person.getAge() <= femaleToAge))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -88,9 +88,9 @@ public class StreamPractice {
                 .filter(person -> person.getAge() >= femaleAge
                         && person.getSex() == Person.Sex.WOMAN
                     && person.getCats() != null)
-                .flatMap(w -> w.getCats().stream())
+                .flatMap(women -> women.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -111,7 +111,7 @@ public class StreamPractice {
                 .filter(validator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean isOdd(int number) {
